Исправляет баги анимации

--- a/source/index.html
+++ b/source/index.html
@@ -291,7 +291,7 @@
                 </div>
 
                 <div class="text-control form__text-control">
-                    <input type="tel" id="comment" class="text-control__input" name="comment" placeholder="Комментарий">
+                    <input type="text" id="comment" class="text-control__input" name="comment" placeholder="Комментарий">
                     <label for="comment" class="text-control__label">Комментарий</label>
                 </div>
 
